# ephios-signup-beachguard

./: pyproject.toml
ephios_signup_beachguard/: __init__.py  apps.py  dynamic_preferences_registry.py  signals.py  signup.py  urls.py  views.py
ephios_signup_beachguard/locale/de/LC_MESSAGES/: django.po
ephios_signup_beachguard/templates/signup_beachguard/: sections.html
