[tool.poetry]
name = "ephios-signup-beachguard"
version = "0.1.0"
description = "This plugin provides a signup method for beach guards where there are regular shifts which all share the same configuration"
authors = ["Julian Baumann <julian@ephios.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ephios = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"ephios_signup_beachguard" = "ephios_signup_beachguard"
